# weather

./: pyproject.toml
.ai/mcp/: mcp.json
